--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <head>
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<LINK href="main.css" rel="stylesheet" type="text/css">
+<LINK href="http://yinwang0.github.com/blog/main.css" rel="stylesheet" type="text/css">
 
 <title>{{ page.title }}</title>
 </head>
