--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ pre {
     font-size: 80%;
     border: solid 1px #CC929A;
     background-color: LightGrey;
-    padding: 2px;
+    padding: 1in;
 }
 
 div {
