--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-family: "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-size: 12pt;
 	padding: 5% 25% 5% 25%;
   width: 50%;
