--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,10 @@
 <head>
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<LINK href="http://yinwang0.github.com/blog/main.css" rel="stylesheet" type="text/css">
+
+<link href="http://yinwang0.github.com/blog/main.css" rel="stylesheet" type="text/css">
+
+<link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
 
 <title>{{ page.title }}</title>
 </head>
