--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 body {
 	font-family: "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	font-size: 12pt;
+	font-size: 18px;
 	padding: 5% 25% 5% 25%;
   width: 50%;
+  line-height: 150%;
 }
 
 li {
@@ -26,6 +27,7 @@ pre {
     border: solid 1px #CC929A;
     background-color: LightGrey;
     padding: .1em;
+    line-height: 130%;
 }
 
 div {
