--- a/main.css
+++ b/main.css
@@ -1,13 +1,19 @@
 body {
-	font-family: "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	font-size: 18px;
-	padding: 5% 25% 5% 25%;
-  width: 50%;
-  line-height: 150%;
+    font-family: "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-size: 18px;
+    margin: 5% 20% 5% 20%;
+    padding: 2% 5% 5% 5%;
+    width: 50%;
+    line-height: 150%;
+    border: 1px solid LightGrey;
 }
 
-li {
-    padding-bottom: 8pt;
+H2 {
+    font-family: "Hiragino Sans GB W3", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    padding: 10px;
+    border-bottom: 2px LightGrey solid;
+    border-left: 2px LightGrey solid;
+    width: 60%;
 }
 
 
@@ -17,18 +23,26 @@ td {
 	padding: 10pt;
 }
 
+
 blockquote {
-    border-left: 3pt lightgrey solid;
-    padding-left: 5pt;
+    border-left: 4px lightgrey solid;
+    padding-left: 5px;
 }
+
 
 pre {
     font-size: 80%;
     border: solid 1px #CC929A;
-    background-color: LightGrey;
+    background-color: Ivory;
     padding: .1em;
     line-height: 130%;
 }
+
+
+code {
+    padding: 1in;
+}
+
 
 div {
     float: right;
@@ -36,14 +50,17 @@ div {
     padding: 2px;
 }
 
+
 a {
     text-decoration: none;
 }
 
+
 a:hover {
-	background-color: #FFBA75;
+	background-color: LightGrey;
 }
 
+
 hr {
-    color: grey;
+    color: LightGrey;
 }
