--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ H2 {
     border-bottom: 2px LightGrey solid;
     border-left: 2px LightGrey solid;
     width: 60%;
+    line-height: 150%;
 }
 
 
