--- a/main.css
+++ b/main.css
@@ -8,12 +8,21 @@ body {
     border: 1px solid LightGrey;
 }
 
+
 H2 {
-    font-family: "Hiragino Sans GB W3", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
     margin-bottom: 40px;
-    padding: 10px;
+    padding: 5px;
     border-bottom: 2px LightGrey solid;
-    border-left: 2px LightGrey solid;
+    width: 80%;
+    line-height: 150%;
+}
+
+
+H3 {
+    font-family: "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    margin-bottom: 30px;
+    border-bottom: 1px LightGrey solid;
     width: 80%;
     line-height: 150%;
 }
