--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ H2 {
     border-bottom: 2px LightGrey solid;
     width: 80%;
     line-height: 150%;
-    color: DarkBrown;
+    color: DarkGreen;
 }
 
 
