--- a/main.css
+++ b/main.css
@@ -45,12 +45,12 @@ blockquote {
 
 
 pre {
-    font-size: 70%;
+    font-size: 65%;
     border: solid 1px #CC929A;
     background-color: Ivory;
-    padding: .1em;
+    padding: 1px;
     line-height: 130%;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 
