--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-<link href="http://yinwang0.github.com/blog/main.css" rel="stylesheet" type="text/css">
+<link href="http://www.yinwang.org/blog-cn/main.css" rel="stylesheet" type="text/css">
 
 <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
 
