--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ blockquote {
 
 
 pre {
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
     font-size: 75%;
     border: solid 1px #CC929A;
     background-color: Ivory;
@@ -59,6 +60,7 @@ pre {
 
 
 code {
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
     color: DarkBlue;
     font-style: regular;
     font-size: 90%;
