--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
 
 
 H2 {
-    font-family: "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Hiragino Sans GB W3", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
