--- a/main.css
+++ b/main.css
@@ -8,9 +8,12 @@ body {
     border: 1px solid LightGrey;
 }
 
+H1 {
+    font-family: "Hiragino Sans GB W3", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
 
 H2 {
-    font-family: "Hiragino Sans GB W3", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Hiragino Sans GB", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
