--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ H1 {
 }
 
 H2 {
-    font-family: "Hiragino Sans GB", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Hiragino Sans GB Regular", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
