--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ H1 {
 }
 
 H2 {
-    font-family: "Hiragino Sans GB Regular", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: STKaiti, "Kaiti SC", "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
@@ -25,7 +25,7 @@ H2 {
 
 
 H3 {
-    font-family: "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: STKaiti, "Kaiti SC", "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
     margin-top: 40px;
     margin-bottom: 30px;
     border-bottom: 1px LightGrey solid;
