--- a/main.css
+++ b/main.css
@@ -70,6 +70,7 @@ code {
 
 a {
     text-decoration: none;
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
 }
 
 
