--- a/main.css
+++ b/main.css
@@ -71,6 +71,7 @@ code {
 a {
     text-decoration: none;
     font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
+    font-size: 90%;
 }
 
 
