--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ a {
     text-decoration: none;
     font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
     font-size: 90%;
+    cursor: crosshair;
 }
 
 
