--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 H1 {
-    font-family: "Hiragino Sans GB W3", "SimSun", "STKai", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: STKaiti, "Kaiti SC", "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
 H2 {
@@ -71,6 +71,7 @@ code {
 
 a {
     text-decoration: none;
+    font-family: STKaiti, "Kaiti SC", "SimSun", Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
     font-size: 90%;
     cursor: crosshair;
 }
