--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,9 @@
 <head>
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
 <link href="http://www.yinwang.org/main.css" rel="stylesheet" type="text/css">
-
 <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
+<link rel="shortcut icon" href="http://www.yinwang.org/images/Y.jpeg">
 
 <title>{{ page.title }}</title>
 </head>
