--- a/main.css
+++ b/main.css
@@ -84,6 +84,13 @@ img {
 }
 
 
+img.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 hr {
     color: LightGrey;
 }
