--- a/main.css
+++ b/main.css
@@ -79,15 +79,13 @@ a:hover {
 }
 
 
-img {
-    margin-left: 10px;
+img.displayed {
+    align: "center";
 }
 
 
-img.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+img {
+    margin-left: 10px;
 }
 
 
