--- a/main.css
+++ b/main.css
@@ -35,6 +35,17 @@ H3 {
 }
 
 
+H4 {
+    font-family: STKaiti, "Kaiti SC", "SimSun", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    border-bottom: 1px LightGrey solid;
+    width: 80%;
+    line-height: 150%;
+    color: DarkBlue;
+}
+
+
 li {
     margin-left: 10px;
 }
