--- a/main.css
+++ b/main.css
@@ -92,10 +92,7 @@ a:hover {
 
 img {
     margin-left: 10px;
-}
-
-
-img.displayed {
+    width: 95%;
     display: block;
     margin-left: auto;
     margin-right: auto;
