--- a/main.css
+++ b/main.css
@@ -95,6 +95,8 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 
